--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -52,165 +53,208 @@ html,body {
   box-sizing:border-box;
 }
 
-body {
-  background-image:linear-gradient(202deg, #61BFD9 16%, #0551B4 67%);
-  font-family:"Helvetica Neue", "Arial", sans-serif;
-  .menu-items {
-    position:fixed;
-    height:100vh;
-    width:30vw;
-    top:0;
-    left:35vw;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    transition:transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-    transform:scale(0.6) translateY(30px);
-    color:white;
+.navigation__checkbox {
+    display: none;
+}
+
+.navigation__button {
+    position: fixed;
+    top: 1.5rem;
+    right: 1.5rem;
+    height: 5rem;
+    width: 5rem;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 50%;
+    z-index: 300;
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+@media screen  and (min-width: 768px) {
+    .navigation__button {
+        top: 4rem;
+        right: 4rem;
+        height: 7rem;
+        width: 7rem;
+    }
+}
+
+.navigation__background {
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+    background: #4A676A;
+    background-size: cover;
+    background-position: center;
+    z-index: 100;
+    transition: all 800ms cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+@media screen and (min-width: 768px) {
+    .navigation__background {
+        top: 4.5rem;
+        right: 4.5rem;
+        height: 6rem;
+        width: 6rem;
+    }
+}
+
+.navigation__nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
     opacity: 0;
-  }
-  .page-content-wrapper {
-    position:fixed;
-    z-index:2;
-    transition:transform 0.5s ease-in-out;
-    width:100%;
-    height:100%;
-    &:before,&:after {
-      content:'';
-      display:block;
-      position:fixed;
-      top:-10vh;
-      height:120vh;
-      width:60vw;
-      background:white;
-      z-index:0;
-      transition:transform .5s ease-in-out,box-shadow 0.5s ease-in-out;
-      box-shadow:0 0 0 black;
-    }
-    &:before {
-      left:-10vw;
-    }
-    &:after {
-      right:-10vw;
-    }
-    .page-content {
-      position:relative;
-      z-index:1;
-      transition:opacity 0.25s ease-in-out;
-      padding:20px 40px 80px 40px;
-      width:100%;
-      height:100%;
-      overflow:auto;
-      img {
-        width:30vw;
-        height:auto;
-        margin-top:20px;
-        margin-bottom:20px;
-        border-radius:5px;
-        box-shadow:0 10px 10px rgba(black,0.25);
-        &:nth-of-type(odd){
-          float:left;
-          margin-right:20px;
-        }
-        &:nth-of-type(even){
-          float:right;
-          margin-left:20px;
-        }
-      }
-    }
-  }
-
-    #menu-toggle, #menu-toggle + label {
-      position:fixed;
-      top:0;
-      left:0;
-      z-index:3;
-      display:block;
-    height:40px;
-    width:40px;
-  }
-  #menu-toggle {
-    opacity:0;
-  }
-  #menu-toggle + label {
-    transition:transform 0.5s ease-in-out;
-  }
-  #menu-toggle + label .fas {
-    font-weight:100;
-    font-size:35px;
-    position:absolute;
-    display:flex;
-    height:40px;
-    width:40px;
-    align-items:center;
-    justify-content:center;
-    top:0;
-    left:0;
-    transition:opacity 0.5s ease-in-out;
-    
-    &.fa-times {
-      opacity:0;
-    }
-  }
-  #menu-toggle.effect {
-    + label {
-      transform:rotate(180deg);
-      .fas {
-        &.fa-times {
-          opacity:1;
-        }
-        &.fa-bars {
-          opacity:0;
-        }
-      }
-    }
-  
-    ~ .page-content-wrapper {
-      pointer-events:none;
-      transform:scale(1.5);
-      &:before,&:after {
-        box-shadow:0 0 10px black;
-      }
-      &:before {
-        transform:translateX(-15vw);
-      }
-      &:after {
-        transform:translateX(15vw);
-      }
-      .page-content {
-        opacity:0;
-      }
-    }
-    ~ .menu-items {
-      transform:scale(1) translateY(0px);
-      opacity:1;
-    }
-  }
+    width: 0;
+    visibility: hidden;
+    z-index: 200;
+    transition: all 800ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Cairo', sans-serif;}
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  overflow: hidden;
-  background: #dcd9cd;
+.navigation__list {
+    /*@include center;*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 100%;
+    list-style: none;
 }
-ul {
+
+.navigation__item {
+    margin: 1rem;
+}
+
+.navigation__link:link,
+.navigation__link:visited {
+    display: inline-block;
+    padding: 1rem 2rem;
+    text-transform: uppercase;
+    color: #f4f4f4;
+    font-size: 2.4rem;
+    text-decoration: none;
+    transition: all .2s;
+}
+
+@media(min-width: 768px) {
+    .navigation__link:link,
+    .navigation__link:visited {
+        font-size: 3.8rem;
+    }
+}
+
+.navigation__link span {
+    margin-right: 1.5rem;
+    display: inline-block;
+}
+
+.navigation__link:hover {
+    color: #C1D0D0;
+    transform: scale(1.1);
+}
+
+.navigation__checkbox:checked~.navigation__background {
+    transform: scale(80)
+}
+
+.navigation__checkbox:checked~.navigation__nav {
+    width: 100%;
+    visibility: visible;
+    opacity: 1;
+}
+
+.navigation__icon {
+
+    position: relative;
+    margin-top: 2.5rem;
+}
+
+@media screen and (min-width: 768px) {
+    .navigation__icon {
+        margin-top: 3.5rem;
+    }
+}
+
+.navigation__icon,
+.navigation__icon::before,
+.navigation__icon::after {
+    display: inline-block;
+    width: 2.2rem;
+    height: 2px;
+    background-color: #4A676A;
+}
+
+@media (min-width: 768px) {
+    .navigation__icon,
+    .navigation__icon::before,
+    .navigation__icon::after {
+        width: 3rem;
+    }
+}
+
+.navigation__icon::before,
+.navigation__icon::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    transition: all 200ms;
+}
+
+.navigation__icon::before {
+    top: -.8rem;
+}
+
+.navigation__icon::after {
+    top: .8rem;
+}
+
+.navigation__button:hover .navigation__icon::before {
+    top: -1rem;
+}
+
+.navigation__button:hover .navigation__icon::after {
+    top: 1rem;
+}
+
+.navigation__checkbox:checked+.navigation__button .navigation__icon {
+    background-color: transparent;
+}
+
+.navigation__checkbox:checked+.navigation__button .navigation__icon::before {
+    top: 0;
+    transform: rotate(135deg);
+}
+
+.navigation__checkbox:checked+.navigation__button .navigation__icon::after {
+    top: 0;
+    transform: rotate(-135deg);
+}
+
+
+
+/*-----------------------*/
+#by {
+  font-family: 'Arima Madurai', cursive;
+  color: #4A676A;
+  font-size: 10px;
+  position: absolute;
+  top: 22%;
+  right: 2.5%; 
+}
+
+.navigation_backeffect {
   position: relative;
 }
-ul li {
+.navigation_backeffect li {
   list-style: none;
   text-align: center;
 }
-ul li a {
+.navigation_backeffect li a {
   color: #333;
   text-decoration: none;
   font-size: 3em;
@@ -219,14 +263,14 @@ ul li a {
   font-weight: 700;
   transition: 0.5s;
 }
-ul:hover li a {
+.navigation_backeffect:hover li a {
   color: #0002;
 }
-ul li:hover a {
+.navigation_backeffect li:hover a {
   color: #000;
   background: transparent;
 }
-ul li a:before {
+.navigation_backeffect li a:before {
   content: "";
   position: absolute;
   top: 50%;
@@ -235,7 +279,7 @@ ul li a:before {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 5em;
+  font-size: 100px;
   color: rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   z-index: -1;
@@ -245,7 +289,7 @@ ul li a:before {
   letter-spacing: 500px;
   transition: letter-spacing 0.5s, left 0.5s;
 }
-ul li a:hover:before {
+.navigation_backeffect li a:hover:before {
   content: attr(data-text);
   opacity: 1;
   left: 50%;
@@ -253,110 +297,22 @@ ul li a:hover:before {
   width: 1800px;
   height: 1800px;
 }
-ul li:nth-child(6n + 1) a:before {
+.navigation_backeffect li:nth-child(6n + 1) a:before {
   background: #0470fe;
 }
-ul li:nth-child(6n + 2) a:before {
+.navigation_backeffect li:nth-child(6n + 2) a:before {
   background: #ff7675;
 }
-ul li:nth-child(6n + 3) a:before {
+.navigation_backeffect li:nth-child(6n + 3) a:before {
   background: #1582fe;
 }
-ul li:nth-child(6n + 4) a:before {
+.navigation_backeffect li:nth-child(6n + 4) a:before {
   background: #a29bfe;
 }
-ul li:nth-child(6n + 5) a:before {
+.navigation_backeffect li:nth-child(6n + 5) a:before {
   background: #fd79a8;
 }
-ul li:nth-child(6n + 6) a:before {
+.navigation_backeffect li:nth-child(6n + 6) a:before {
   background: #ffeaa7;
 }
-.menu {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  display: flex;
-  padding: 0;
-}
-.line {
-  fill: none;
-  stroke: black;
-  stroke-width: 6;
-  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.line1 {
-  stroke-dasharray: 60 207;
-  stroke-width: 6;
-}
-.line2 {
-  stroke-dasharray: 60 60;
-  stroke-width: 6;
-}
-.line3 {
-  stroke-dasharray: 60 207;
-  stroke-width: 6;
-}
-.opened .line1 {
-  stroke-dasharray: 90 207;
-  stroke-dashoffset: -134;
-  stroke-width: 6;
-}
-.opened .line2 {
-  stroke-dasharray: 1 60;
-  stroke-dashoffset: -30;
-  stroke-width: 6;
-}
-.opened .line3 {
-  stroke-dasharray: 90 207;
-  stroke-dashoffset: -134;
-  stroke-width: 6;
-}
-body {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-}
-.menu {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  display: flex;
-  padding: 0;
-}
-.line {
-  fill: none;
-  stroke: black;
-  stroke-width: 6;
-  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.line1 {
-  stroke-dasharray: 60 207;
-  stroke-width: 6;
-}
-.line2 {
-  stroke-dasharray: 60 60;
-  stroke-width: 6;
-}
-.line3 {
-  stroke-dasharray: 60 207;
-  stroke-width: 6;
-}
-.opened .line1 {
-  stroke-dasharray: 90 207;
-  stroke-dashoffset: -134;
-  stroke-width: 6;
-}
-.opened .line2 {
-  stroke-dasharray: 1 60;
-  stroke-dashoffset: -30;
-  stroke-width: 6;
-}
-.opened .line3 {
-  stroke-dasharray: 90 207;
-  stroke-dashoffset: -134;
-  stroke-width: 6;
-}
+
