--- a/public/style.css
+++ b/public/style.css
@@ -61,8 +61,8 @@ html,body {
     position: fixed;
     top: 1.5rem;
     right: 1.5rem;
-    height: 4rem; /*5*/
-    width: 4rem;
+    height: 4.5rem; /*5*/
+    width: 4.5rem;
     text-align: center;
     background-color: #fff;
     border-radius: 50%;
@@ -75,10 +75,9 @@ html,body {
     .navigation__button {
         top: 4rem;
         right: 4rem;
-        height: 6rem; /*7rem* and for witdth*/
-        width: 6rem;
-    }
-}
+        height: 4.5rem; /*7rem* and for witdth*/
+        width: 4.5rem;
+}}
 
 .navigation__background {
     position: fixed;
@@ -98,8 +97,8 @@ html,body {
     .navigation__background {
         top: 4.5rem;
         right: 4.5rem;
-        height: 4.5rem; /* 6 */
-        width: 4.5rem; /* 6*/
+        height: 4rem; /* 6 */
+        width: 4rem; /* 6*/
     }
 }
 
@@ -170,13 +169,13 @@ html,body {
 
 .navigation__icon {
 
-    position: relative;
-    margin-top: 2.5rem;
+  position: relative;
+  margin-top: auto;
 }
 
 @media screen and (min-width: 768px) {
     .navigation__icon {
-        margin-top: 3.5rem;
+        margin-top: 2.5rem;
     }
 }
 
@@ -184,8 +183,8 @@ html,body {
 .navigation__icon::before,
 .navigation__icon::after {
     display: inline-block;
-    width: 2.2rem;
-    height: 2px;
+    width: 1.5rem;
+    height: 1px;
     background-color: #4A676A;
 }
 
@@ -193,7 +192,8 @@ html,body {
     .navigation__icon,
     .navigation__icon::before,
     .navigation__icon::after {
-        width: 3rem;
+        width: 2rem;
+        height: 1.5px;
     }
 }
 
@@ -210,7 +210,7 @@ html,body {
 }
 
 .navigation__icon::after {
-    top: .8rem;
+    top: 0.8rem;
 }
 
 .navigation__button:hover .navigation__icon::before {
