--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ margin: 0;
 padding: 0;
 background-color: #c8e7d8;
 color: #4e5e72;
-text-align: center;
+/*text-align: center;*/
 font-family: monospace;
 overflow-y: auto;
 padding-bottom: 6.74rem;
