--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -411,12 +411,22 @@ body.hide{
 }
 /*close button*/
 .close-container{
-  position: relative;
+  /*position: relative;
   margin: 0 auto;
   width: 50px;
   height: 50px;
   margin-top: 100px;
   float: inline-end;
+  pointer-events: fill;
+  display: block;
+  cursor: pointer;
+  opacity: 1;*/
+  position: absolute;
+  top: 0; 
+  right: 0; 
+  transform: translateX(-50%); 
+  width: 50px;
+  height: 50px;
   pointer-events: fill;
   display: block;
   cursor: pointer;
