--- a/public/style.css
+++ b/public/style.css
@@ -26,9 +26,16 @@ float:right;
 }
 
 footer {
-background-color: #333;
+/*background-color: #333;
 color: #fff;
-position:fixed;
+position:fixed;*/
+  background-color: #333;
+  color: #fff;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 } 
 
 
