--- a/public/contact.css
+++ b/public/contact.css
@@ -15,6 +15,9 @@ h1 {
   font-size: 2rem;
   font-family: 'Dancing Script';
 }
+footer{
+  position: fixed;
+}
 
 .contact-section {
     display: flex;
