--- a/public/index.css
+++ b/public/index.css
@@ -9,6 +9,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+footer{
+    
+    width: 100%;
+    bottom: 0;
+}
 
 body {
     font-family: "Open Sans", sans-serif;
@@ -18,6 +23,7 @@ body {
 }
 section{
     overflow: auto;
+    overflow-x: hidden;
 }
 
 header {
