--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,7 @@ color: #fff;
 position:fixed;*/
   background-color: #333;
   color: #fff;
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
