--- a/public/style.css
+++ b/public/style.css
@@ -26,12 +26,12 @@ float:right;
 }
 
 footer {
-/*background-color: #333;
+background-color: #333;
 color: #fff;
-position:fixed;*/
+position:relative;
   background-color: #333;
   color: #fff;
-  position: relative;
+  /*position: relative;*/
   left: 0;
   bottom: 0;
   width: 100%;
