--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -468,3 +468,9 @@ body.hide{
   transform: rotate(45deg);
   background-color: #F25C66;
 }
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px 0;
+  font-size: 25px;
+}
