--- a/public/aboutus.css
+++ b/public/aboutus.css
@@ -78,6 +78,7 @@ footer{
   .container-text{
     width: 80%;
     margin: 20px auto;
+    overflow-x: hidden;
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
