--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -8,12 +8,12 @@
   align-items: normal; 
   height: 100vh;
 }
-body{
-  margin: auto;
-  }
   .artifact{
-    margin: 3% auto;
-    width: 90%;
+    align-items: center;
+    justify-content: center;
+    margin: 3% 2% 0 2%;
+    display: block;
+    width: 100%;
     height: 100%;
   }
 .cols {
