--- a/public/contact.css
+++ b/public/contact.css
@@ -153,18 +153,18 @@ textarea:focus {
   margin: auto;
 }
 .envelope.front {
-  width: 40vw;
-  height: 40vh;
+  width: 10rem;
+  height: 6rem;
   border-radius: 0 0 1rem 1rem;
   overflow: hidden;
-  z-index: 9999;
+  z-index: 1;
   opacity: 0;
 }
 .envelope.front::before, .envelope.front::after {
   position: absolute;
   display: block;
-   width: 10vw;
-  height: 40vh; 
+  width: 12rem;
+  height: 6rem;
   background-color: #e9dc9d;
   transform: rotate(30deg);
   transform-origin: 0 0;
@@ -178,16 +178,16 @@ textarea:focus {
 }
 .envelope.back {
   top: -4rem;
-  width: 40vw;
-  height: 40vh;
+  width: 10rem;
+  height: 10rem;
   overflow: hidden;
   z-index: -9998;
   opacity: 0;
   transform: translateY(-6rem);
   &::before {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 10rem;
+    height: 10rem;
     background-color: #e9dc9d;
     border-radius: 1rem;
     content: '';
@@ -254,26 +254,14 @@ textarea:focus {
   100%{transform: translateY(-8rem) scale(0.3, 0.5);}
 }
 
-
+/*
 @keyframes pushLetter {
   0% {transform: translateY(-8rem) scale(0.3, 0.5);}
   50% {transform: translateY(-8rem) scale(0.3, 0.5);}
   90% {transform: translateY(-8.5rem) scale(0.3, 0.5);}
   100% {transform: translateY(-8rem) scale(0.3, 0.5);}
 }
-.refresh-button {
-  position: absolute;
-  top: 12cm;
-  left: 16.5cm;
-}
-
-.refresh-button:hover {
-  background-color: #007bff; 
-  color: #fff;
-  cursor: pointer; 
-  opacity: 0.8;
-  transition: opacity 0.3s ease; 
-}
+*/
 header {
   background-color: #333;
   color: #fff;
