--- a/public/contact.css
+++ b/public/contact.css
@@ -266,19 +266,22 @@ header {
   color: #fff;
   padding: 20px 0;
 }
-body{
-background: linear-gradient(45deg, blue, green, yellow, red);
-	background-repeat: no-repeat;
-	background-size: 400% 100%;
-	backdrop-filter: brightness(40%);
-	margin: 0;
-	min-height: 100vh;
-	animation: slide 20s infinite;
+body {
+	background: linear-gradient(-45deg, red, blue, green,yellow);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
 }
 
-@keyframes slide {
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
 	50% {
-		background-position: 100%;
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
 	}
 }
 
