--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -485,3 +485,21 @@ header {
   padding: 20px 0;
   font-size: 25px;
 }
+body {
+	background: linear-gradient(-45deg, red, blue, green,yellow);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
